--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     image: postgres:14-alpine
     container_name: library
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: library
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
       - ./sql:/sql
+      - ./configs:/var/lib/postgresql/data
     ports:
       - "5432:5432"
